improve swagger and use it for the REST
