# pkg/api/transformers.go
@@ -18,8 +18,10 @@ import (
 	"github.com/acquirecloud/golibs/cast"
 	"github.com/simila-io/simila/api/gen/format/v1"
 	"github.com/simila-io/simila/api/gen/index/v1"
+	similapi "github.com/simila-io/simila/api/genpublic/v1"
 	"github.com/simila-io/simila/pkg/indexer/persistence"
 	"google.golang.org/protobuf/types/known/timestamppb"
+	"time"
 )
 
 func toApiFormat(mFmt persistence.Format) *format.Format {
@@ -97,4 +99,171 @@ func toApiRecord(mRec persistence.IndexRecord) *index.Record {
 		Segment: mRec.Segment,
 		Vector:  mRec.Vector,
 	}
+}
+
+func createIndexRequest2Proto(ci similapi.CreateIndexRequest) *index.CreateIndexRequest {
+	return &index.CreateIndexRequest{
+		Id:       ci.Id,
+		Format:   ci.Format,
+		Tags:     ci.Tags,
+		Document: ci.Document,
+		Records:  records2Proto(ci.Records),
+	}
+}
+
+func records2Proto(rs []similapi.Record) []*index.Record {
+	if len(rs) == 0 {
+		return nil
+	}
+	res := make([]*index.Record, len(rs))
+	for i, r := range rs {
+		res[i] = record2Proto(r)
+	}
+	return res
+}
+
+func record2Proto(r similapi.Record) *index.Record {
+	return &index.Record{
+		Id:      r.Id,
+		Segment: r.Segment,
+		Vector:  r.Vector,
+	}
+}
+
+func patchIndexRecordsRequest2Proto(pr similapi.PatchRecordsRequest) *index.PatchRecordsRequest {
+	return &index.PatchRecordsRequest{
+		Id:            pr.Id,
+		UpsertRecords: records2Proto(pr.UpsertRecords),
+		DeleteRecords: records2Proto(pr.DeleteRecords),
+	}
+}
+
+func patchIndexRecordsResult2Rest(prr *index.PatchRecordsResult) similapi.PatchRecordsResult {
+	return similapi.PatchRecordsResult{
+		Deleted:  int(prr.Deleted),
+		Upserted: int(prr.Upserted),
+	}
+}
+
+func searchRecordsResultItems2Rest(srr *index.SearchRecordsResultItem) similapi.SearchRecord {
+	return similapi.SearchRecord{
+		IndexRecord:     record2Rest(srr.IndexRecord),
+		IndexId:         srr.IndexId,
+		Score:           int(cast.Value(srr.Score, -1)),
+		MatchedKeywords: srr.MatchedKeywords,
+	}
+}
+
+func searchRecordsResult2Rest(srr *index.SearchRecordsResult) similapi.SearchResult {
+	res := similapi.SearchResult{}
+	if srr == nil {
+		return res
+	}
+	res.Records = make([]similapi.SearchRecord, len(res.Records))
+	for i, sr := range srr.Items {
+		res.Records[i] = searchRecordsResultItems2Rest(sr)
+	}
+	res.NextPageId = srr.NextPageId
+	res.Total = int(srr.Total)
+	return res
+}
+
+func searchRequest2Proto(sr similapi.SearchRequest) *index.SearchRecordsRequest {
+	return &index.SearchRecordsRequest{
+		Text:         sr.Text,
+		Tags:         sr.Tags,
+		Distinct:     cast.Ptr(sr.Distinct),
+		Limit:        cast.Ptr(int64(sr.Limit)),
+		PageId:       cast.Ptr(sr.PageId),
+		OrderByScore: cast.Ptr(sr.OrderByScore),
+		IndexIDs:     sr.IndexIDs,
+		Offset:       cast.Ptr(int64(sr.Offset)),
+	}
+}
+
+func records2Rest(rs []*index.Record) []similapi.Record {
+	if len(rs) == 0 {
+		return nil
+	}
+	res := make([]similapi.Record, len(rs))
+	for i, r := range rs {
+		res[i] = record2Rest(r)
+	}
+	return res
+}
+
+func record2Rest(r *index.Record) similapi.Record {
+	return similapi.Record{
+		Id:      r.Id,
+		Segment: r.Segment,
+		Vector:  r.Vector,
+	}
+}
+
+func listRecordsResult2Rest(lrr *index.ListRecordsResult) similapi.RecordsResult {
+	if lrr == nil {
+		return similapi.RecordsResult{}
+	}
+	return similapi.RecordsResult{
+		Records:    records2Rest(lrr.Records),
+		NextPageId: lrr.NextRecordId,
+		Total:      int(lrr.Total),
+	}
+}
+
+func index2Rest(r *index.Index) similapi.Index {
+	if r == nil {
+		return similapi.Index{}
+	}
+	return similapi.Index{
+		Id:        r.Id,
+		Format:    r.Format,
+		Tags:      r.Tags,
+		CreatedAt: protoTime2Time(r.CreatedAt),
+	}
+}
+
+func indexes2Rest(is *index.Indexes) similapi.Indexes {
+	res := similapi.Indexes{}
+	if is == nil {
+		return res
+	}
+	res.NextPageId = is.NextIndexId
+	res.Total = int(is.Total)
+	res.Indexes = make([]similapi.Index, len(is.Indexes))
+	for i, idx := range is.Indexes {
+		res.Indexes[i] = index2Rest(idx)
+	}
+	return res
+}
+
+func index2Proto(i similapi.Index) *index.Index {
+	return &index.Index{
+		Id:        i.Id,
+		Format:    i.Format,
+		Tags:      i.Tags,
+		CreatedAt: timestamppb.New(i.CreatedAt),
+	}
+}
+func format2Rest(f *format.Format) similapi.Format {
+	return similapi.Format{Name: f.Name}
+}
+
+func formats2Rest(fs *format.Formats) similapi.Formats {
+	res := similapi.Formats{}
+	if fs == nil || len(fs.Formats) == 0 {
+		return res
+	}
+	res.Formats = make([]similapi.Format, len(fs.Formats))
+	for i, f := range fs.Formats {
+		res.Formats[i] = format2Rest(f)
+	}
+	return res
+}
+
+func protoTime2Time(pt *timestamppb.Timestamp) time.Time {
+	if pt == nil {
+		return time.Time{}
+	}
+	return pt.AsTime()
 }
